preventing d-tree labels from being resized and overlapping

--- a/client/stylesheets/layout.styl
+++ b/client/stylesheets/layout.styl
@@ -2,7 +2,7 @@ body
   background-color black
   color #eeeeee
 
-.label
+.diagnosis .label
   font-size 1.2em
 
 .header
@@ -29,7 +29,7 @@ navbar-height = 65px
   background-color #111
   border-left 1px solid #666
   display inline-block
-  padding 5px
+  padding-top 13px
   font-weight bold
   width 200px
   height navbar-height - 2
